remove console logs; fix pwa/sw.js

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -74,7 +74,7 @@
 					</summary>
 					<p>This site!</p>
 					<p>First I was going to create it in Angular, but then I learned React and wanted it to it in that. But then I
-						figured out how Elm worked and created the actual first version in that - on archive.org you can see the
+						figured out how Elm worked and created the actual <em>first</em> version in that - on archive.org you can see the
 						first
 						version uses <code>elm.js</code>, but I found it to be too opinionated. Not to mention I found the
 						<code>information/javascript</code> ratio to be too low.</p>
