--- a/404.html
+++ b/404.html
@@ -66,11 +66,23 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<main>
 		<section>
 			<h1>404 File Not Found</h1>
-			<h2>You've gone somewhere, where you're not supposed to be!</h2>
-			<p>This site is a single HTML file - Well, and <em>this one</em>, but there's not much content here...</p>
-			<p>You're not really support to go to anywhere other than the <code>#xxxx</code> pages.</p>
-			<p><a href="/">Click Here</a> to go back home.</p>
+			<p>You've gone somewhere, where you're not supposed to be!</p>
+			<h2>Here, try an archive</h2>
+			<a id=archive></a>
+			<h2>or an integrated Google Search</h2>
+			<!-- created via https://cse.google.com/cse/all -->
+			<script async src="https://cse.google.com/cse.js?cx=007273406661708460536:ir7f8zjh3fd"></script>
+			<div class="gcse-search"></div>
+			<footer>
+				Hit me up if any other search engine provides a customized search. I'm happy to drop a Google product.
+			</footer>
 		</section>
+		<script>
+			const target = `https://web.archive.org/${window.location.href}`
+			let archiveLink = document.getElementById("archive");
+			archiveLink.href = target;
+			archiveLink.innerHTML = target;
+		</script>
 	</main>
 	<footer>
 		<div class=" copyright">
