--- a/pages/todo.html
+++ b/pages/todo.html
@@ -70,7 +70,7 @@
 			<h1>TODO</h1>
 			<ul>
 				<li>Redo the CSS - mobile looks weird</li>
-				<li>Fix the PWA functionality - if I update the site, it doesn't update the page</li>
+				<li>Fix the PWA functionality - if I update the HTML, it won't update the page on the client side</li>
 				<li>Figure out how to update pages on the client side after an update</li>
 				<li>Check my Spark files for article inspiration. I believe I was still going to write a letter to myself in 2009 (about how and where to start with programming)</li>
 				<li>Gotta check out ARIA tags - they weren't really mentioned on WHATWG's Living Document</li>
