add Code of Conduct
I think you'll like this one. Trust me.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -63,6 +63,7 @@
 		<a href=pages/projects.html>Projects</a>
 		<a href=pages/experimentations.html>Experimentations</a>
 		<a href=pages/todo.html>TODO</a>
+		<a href=pages/code-of-conduct.html>Code of Conduct</a>
 		<a href=pages/about.html>About</a>
 	</nav>
 
