forgot to add CoC link to index.html
whoops!

Also removed comment about deprecated feature.

--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	</header>
 
 	<nav>
-		<!-- `this` refers to the anchor element. `hash` refers to the `#xxxx` of the `href` attribute -->
-		<!-- You can't use `this.href`, because that returns the full URL and we only want the hash -->
 		<a href>Frontpage</a>
 		<a href=pages/articles.html>Articles</a>
 		<a href=pages/projects.html>Projects</a>
 		<a href=pages/experimentations.html>Experimentations</a>
 		<a href=pages/todo.html>TODO</a>
+		<a href=pages/code-of-conduct.html>Code of Conduct</a>
 		<a href=pages/about.html>About</a>
 	</nav>
 
