--- a/pages/praetorianpi.html
+++ b/pages/praetorianpi.html
@@ -10,11 +10,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel=manifest href=/manifest.json />
 	<link rel=icon href=/images/favicon.svg />
-	<link async rel=stylesheet href=styles/layout.css />
-	<link async rel=stylesheet href=styles/header.css />
-	<link async rel=stylesheet href=styles/nav.css />
-	<link async rel=stylesheet href=styles/main.css />
-	<link async rel=stylesheet href=styles/footer.css />
+	<link async rel=stylesheet href=/styles/layout.css />
+	<link async rel=stylesheet href=/styles/header.css />
+	<link async rel=stylesheet href=/styles/nav.css />
+	<link async rel=stylesheet href=/styles/main.css />
+	<link async rel=stylesheet href=/styles/footer.css />
 </head>
 
 <body>
