--- a/pages/experimentations.html
+++ b/pages/experimentations.html
@@ -3,11 +3,12 @@
 
 <head>
 	<title>Thaumatorium</title>
-	<base href="/" />
+	<meta charset=utf-8 />
+	<base href=/ />
 	<meta name=description content="Where the Magic happens" />
 	<meta name=theme-color content=#800 />
-	<link rel="apple-touch-icon" href="/images/icons-192.png">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel=apple-touch-icon href=/images/icons-192.png>
+	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link rel=manifest href=/manifest.json />
 	<link rel=icon href=/images/favicon.svg />
 	<link async rel=stylesheet href=/styles/layout.css />
@@ -336,7 +337,7 @@
 		</section>
 	</main>
 	<footer>
-		<div class="copyright">
+		<div class=copyright>
 			&copy;<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
 			&ndash; <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;"></a>,
 			<abbr
@@ -345,7 +346,7 @@
 
 		</div>
 		<!-- Sssh - don't tell anyone! -->
-		<a class="secret" onclick=specialGoto(event)
+		<a class=secret onclick=specialGoto(event)
 			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
 	</footer>
 	<script async src=pwa.js></script>
