add Cache Busting option
By adding "?v=1"  to the css links, I can force an update of the cache on the client side by updating the number. This is apparently called Cache Busting. Now I could set the expiry date of the CSS to 10 years into the future if I wanted. Not that I can, because I'm currently hosted on github.io :(

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<!-- manifest.json is currently only supported by Chromium based browsers, as per https://www.caniuse.com/#feat=web-app-manifest -->
 	<link rel=manifest href=/manifest.json />
 	<link rel=icon href=/images/favicon.svg />
-	<link async rel=stylesheet href=/styles/layout.css />
-	<link async rel=stylesheet href=/styles/header.css />
-	<link async rel=stylesheet href=/styles/nav.css />
-	<link async rel=stylesheet href=/styles/main.css />
-	<link async rel=stylesheet href=/styles/footer.css />
+	<link async rel=stylesheet href="/styles/layout.css?v=1" />
+	<link async rel=stylesheet href="/styles/header.css?v=1" />
+	<link async rel=stylesheet href="/styles/nav.css?v=1" />
+	<link async rel=stylesheet href="/styles/main.css?v=1" />
+	<link async rel=stylesheet href="/styles/footer.css?v=1" />
 </head>
 
 <body>
