remove the UTF-8 BOM
I'm using <meta charset=utf-8 /> to signal UTF-8 usage now and I forgot to remove the BOM from the files that actually had them.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!-- Since I'm used to writing en-US, I'll probably make mistakes in this document. Oh well. -->
 <html lang="en-GB">
 
@@ -28,6 +28,9 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<!-- manifest.json is currently only supported by Chromium based browsers, as per https://www.caniuse.com/#feat=web-app-manifest -->
 	<link rel=manifest href=/manifest.json />
 	<link rel=icon href=/images/favicon.svg />
+	<!-- The reason for the ?v=1 in the CSS url is Cache Busting. This gives me control over which file version is cached on the user's end -->
+	<!-- Lets imagine a user has my first version cached, and I make a change, but the expiry date of the file is a year into the future. I can simply up the number and the browser will replace the file (no matter whether I actually made a change or not) -->
+	<!-- Now I'm, as of writing, hosting on github.io and I have no control over the expiry date (which is 10 minutes, IIRC), but now I can remember myself to do this in the future once I go the self-hosting route :) -->
 	<link async rel=stylesheet href="/styles/layout.css?v=1" />
 	<link async rel=stylesheet href="/styles/header.css?v=1" />
 	<link async rel=stylesheet href="/styles/nav.css?v=1" />
