--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<!-- manifest.json is currently only supported by Chromium based browsers, as per https://www.caniuse.com/#feat=web-app-manifest -->
 	<link rel=manifest href=/manifest.json />
-	<link rel=icon href=/images/favicon.png />
+	<link rel=icon href=/images/favicon.svg />
 	<!-- The reason for the ?v=1 in the CSS url is Cache Busting. This gives me control over which file version is cached on the user's end -->
 	<!-- Lets imagine a user has my first version cached, and I make a change, but the expiry date of the file is a year into the future. I can simply up the number and the browser will replace the file (no matter whether I actually made a change or not) -->
 	<!-- Now I'm, as of writing, hosting on github.io and I have no control over the expiry date (which is 10 minutes, IIRC), but now I can remember myself to do this in the future once I go the self-hosting route :) -->
