minify logo and renaming
rename it from Thaumatorium.svg to logo.svg, to improve the rolename of the file.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<header>
 		<div id=banner-logo>
 			<a href="/">
-				<img loading=lazy height=111 width=111 src="/images/Thaumatorium.svg"
+				<img loading=lazy height=111 width=111 src="/images/logo.svg"
 					alt="main logo consisting of a checkerboard pattern" />
 			</a>
 		</div>
