add dashes to the nav menu

--- a/index.html
+++ b/index.html
@@ -60,11 +60,17 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 
 	<nav>
 		<a href>Frontpage</a>
+		<span> - </span>
 		<a href=pages/articles.html>Articles</a>
+		<span> - </span>
 		<a href=pages/projects.html>Projects</a>
+		<span> - </span>
 		<a href=pages/experimentations.html>Experimentations</a>
+		<span> - </span>
 		<a href=pages/todo.html>TODO</a>
+		<span> - </span>
 		<a href=pages/code-of-conduct.html>Code of Conduct</a>
+		<span> - </span>
 		<a href=pages/about.html>About</a>
 	</nav>
 
