surround <textarea>s by <label>s
To remove some warning from Edge's Hint system

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -123,10 +123,8 @@
 						<figcaption>Mocking Spongebob</figcaption>
 					</figure>
 					<h3>Mocking Spongebob Text Generator</h3>
-					<p>input:</p>
-					<textarea id=mstg_in></textarea>
-					<p>output - click to copy to clipboard:</p>
-					<textarea id=mstg_out readonly></textarea>
+					<label>input:<textarea id=mstg_in></textarea></label>
+					<label>output - click to copy to clipboard:<textarea id=mstg_out readonly></textarea></label>
 					<script type=module src=/projects/scripts/mstg.mjs></script>
 				</details>
 			</section>
@@ -138,10 +136,8 @@
 					</summary>
 					<p>I <em>could</em> go to <a href=https://ROT13.com>ROT13.com</a>, but why?</p>
 					<h3>ROT13</h3>
-					<p>input:</p>
-					<textarea id=rot13_in></textarea>
-					<p>output - click to copy to clipboard:</p>
-					<textarea id=rot13_out readonly></textarea>
+					<label>input:<textarea id=rot13_in></textarea></label>
+					<label>output - click to copy to clipboard:<textarea id=rot13_out readonly></textarea></label>
 					<script type=module src=/projects/scripts/rot13.mjs></script>
 				</details>
 			</section>
@@ -159,10 +155,8 @@
 					</blockquote> - <a href=https://en.wikipedia.org/wiki/Clean_URL#Slug>wikipedia</a>
 					<section>
 						<h3>Slugify</h3>
-						<p>input:</p>
-						<textarea id=slugify_in></textarea>
-						<p>output - click to copy to clipboard:</p>
-						<textarea id=slugify_out readonly></textarea>
+						<label>input:<textarea id=slugify_in></textarea></label>
+						<label>output - click to copy to clipboard:<textarea id=slugify_out readonly></textarea></label>
 						<script type=module src=/projects/scripts/slugify.mjs></script>
 					</section>
 				</details>
@@ -175,16 +169,12 @@
 					</summary>
 					<section>
 						<h3>Encode</h3>
-						<p>input:</p>
-						<textarea id=base64_in_encode></textarea>
-						<p>output - click to copy to clipboard:</p>
-						<textarea id=base64_out_encode readonly></textarea>
+						<label>input:<textarea id=base64_in_encode></textarea></label>
+						<label>output - click to copy to clipboard:<textarea id=base64_out_encode readonly></textarea></label>
 
 						<h3>Decode</h3>
-						<p>input:</p>
-						<textarea id=base64_in_decode></textarea>
-						<p>output - click to copy to clipboard:</p>
-						<textarea id=base64_out_decode readonly></textarea>
+						<label>input:<textarea id=base64_in_decode></textarea></label>
+						<label>output - click to copy to clipboard:<textarea id=base64_out_decode readonly></textarea></label>
 
 						<script type=module src=/projects/scripts/base64.mjs></script>
 					</section>
