move TODO to frontpage; remove todo.html
This makes the FP look less empty.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 		<span> - </span>
 		<a href=pages/experimentations.html>Experimentations</a>
 		<span> - </span>
-		<a href=pages/todo.html>TODO</a>
-		<span> - </span>
 		<a href=pages/code-of-conduct.html>Code of Conduct</a>
 		<span> - </span>
 		<a href=pages/about.html>About</a>
@@ -76,30 +74,64 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 
 	<main>
 		<article>
-			<h2>Welcome to the Thaumatorium!</h2>
-			<p>
-				This is my personal website, where I write my personal thoughts and post my little projects.
-			<p>
-				Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff
-				shit up. I like to think that <strong>this is how the web is supposed to be</strong>, other than that these are
-				static pages instead of built up by some (C#/JS/PHP/Java) framework.
-			<p>
-				If you want an example on <em>how not to do HTML</em>, take a look at Twitter with their
-				<code>&lt;div&gt;&lt;div&gt;&lt;div&gt;divs&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</code>
-				nonsense. Silly Twitter! That's not how you should use HTML!
-			<p>
-				This site's author is based in the Netherlands. I like to take an unnormal take on things: Look at what the
-				masses
-				are doing, learn from them by NOT doing that and then find out where the good shit is at.
-			<p>
-				That doesn't necessarily mean that popular = bad. It means that most programmers don't *really* care about
-				quality or speed - if not them, the company they work for.
-			<footer>
+			<section>
+				<h2>Welcome to the Thaumatorium!</h2>
 				<p>
-					<strong>Disclaimer:</strong> I'm not perfect, so this file <em>will likely</em> contain small mistakes. If you
-					find any, please open a <a href=https://github.com/Thaumatorium/thaumatorium.github.io/issues>Github
-						Issue</a>, whether it's just a spelling mistake or something wrong with the HTML.
-			</footer>
+					This is my personal website, where I write my personal thoughts and post my little projects.
+				<p>
+					Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff
+					shit up. I like to think that <strong>this is how the web is supposed to be</strong>, other than that these
+					are
+					static pages instead of built up by some (C#/JS/PHP/Java) framework.
+				<p>
+					If you want an example on <em>how not to do HTML</em>, take a look at Twitter with their
+					<code>&lt;div&gt;&lt;div&gt;&lt;div&gt;divs&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</code>
+					nonsense. Silly Twitter! That's not how you should use HTML!
+				<p>
+					This site's author is based in the Netherlands. I like to take an unnormal take on things: Look at what the
+					masses
+					are doing, learn from them by NOT doing that and then find out where the good shit is at.
+				<p>
+					That doesn't necessarily mean that popular = bad. It means that most programmers don't *really* care about
+					quality or speed - if not them, the company they work for.
+				<footer>
+					<p>
+						<strong>Disclaimer:</strong> I'm not perfect, so this file <em>will likely</em> contain small mistakes. If
+						you
+						find any, please open a <a href=https://github.com/Thaumatorium/thaumatorium.github.io/issues>Github
+							Issue</a>, whether it's just a spelling mistake or something wrong with the HTML.
+				</footer>
+			</section>
+			<section>
+				<h2>TODO</h2>
+				<ul>
+
+					<li>Check my Spark files for article inspiration. I believe I was still going to write a letter to myself in
+						2009 (about how and where to start with programming)</li>
+					<li>Gotta check out ARIA tags - they weren't really mentioned on WHATWG's Living Document</li>
+					<li><del>Fix the PWA functionality - if I update the HTML, it won't update the page on the client side</del>
+					</li>
+					<li><del>Figure out how to update pages on the client side after an update</del></li>
+					<li><del>Redo the CSS - mobile looks weird</del> Already (mostly) fixed it, without rewrite</li>
+					<li><del>If you go to <code>#starfield</code>, via <code>#projects</code>, the starfield won't show</del></li>
+					<li><del>Put each article/blog in a separate file</del></li>
+					<li><del>Make it able to switch main article</del></li>
+					<li><del>Make thaumatorium.com functional</del></li>
+					<li><del>I broke the browser history (clicking back doesn't "refresh" the page) 😭</del></li>
+					<li><del>Add brightness and color to the <code>starfield</code></del></li>
+					<li><del>Make articles look a bit better</del></li>
+					<li><del>Turn the main tags into articles and stick them all into a &lt;main&gt;, perhaps that gets the layout
+							working</del></li>
+					<li><del>Center the main content</del></li>
+					<li><del>Create Mocking Spongebob generator</del></li>
+					<li><del>Create ROT13 generator</del></li>
+					<li><del>Gotta check out how to create a sitemap, if necessary. Make sure to include the <a
+								href=https://en.wikipedia.org/wiki/Sitemaps#Element_definitions>necessary tags</a></del></li>
+					<li><del>Make thaumatorium.com look good</del></li>
+					<li><del>Transfer my articles from my <a href=https://thaumatorium.wordpress.com>ye olde wordpress</a>
+							site</del></li>
+				</ul>
+			</section>
 		</article>
 	</main>
 	<footer>
