use <ins> on TODO list

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 					<li><del>Fix the PWA functionality - if I update the HTML, it won't update the page on the client side</del>
 					</li>
 					<li><del>Figure out how to update pages on the client side after an update</del></li>
-					<li><del>Redo the CSS - mobile looks weird</del> Already (mostly) fixed it, without rewrite</li>
+					<li><del>Redo the CSS - mobile looks weird</del><ins>Already (mostly) fixed it, without rewrite</ins></li>
 					<li><del>If you go to <code>#starfield</code>, via <code>#projects</code>, the starfield won't show</del></li>
 					<li><del>Put each article/blog in a separate file</del></li>
 					<li><del>Make it able to switch main article</del></li>
