add message in 404.html noting what to do when the search bar doesn't show

--- a/404.html
+++ b/404.html
@@ -59,6 +59,7 @@
 			<h2>Here, try an archive</h2>
 			<a id=archive></a>
 			<h2>or an integrated Google Search</h2>
+			<p>Can't see the search bar? Press <kbd>Ctrl+F5</kbd> to force it to show up.</p>
 			<!-- created via https://cse.google.com/cse/all -->
 			<script async src="https://cse.google.com/cse.js?cx=007273406661708460536:ir7f8zjh3fd"></script>
 			<div class="gcse-search"></div>
