add Random Video page
Just a list of meme/dank/music videos.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<header>
 		<div id=banner-logo>
 			<a href="/">
-				<img height=111 width=111 src="/images/logo.svg"
-					alt="main logo consisting of a checkerboard pattern" />
+				<img height=111 width=111 src="/images/logo.svg" alt="main logo consisting of a checkerboard pattern" />
 			</a>
 		</div>
 		<div id=banner-text>
@@ -68,6 +67,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 		<a href=pages/experimentations.html>Experimentations</a>
 		<span> - </span>
 		<a href=pages/code-of-conduct.html>Code of Conduct</a>
+		<span> - </span>
+		<a href=pages/random-video.html>Random video</a>
 		<span> - </span>
 		<a href=pages/about.html>About</a>
 	</nav>
